Add ONNX embedding client